# plotly-relayout

./: .gitignore  README.md  pyproject.toml
custom_components/reflex_plotly_relayout/: __init__.py  plotly_relayout.py
plotly_relayout_demo/: .gitignore  requirements.txt  rxconfig.py
plotly_relayout_demo/plotly_relayout_demo/: plotly_relayout_demo.py
